--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet"  href = "assets/stylesheets/style.css">
+    <link rel = "icon" href =  
+    "assets/images/icon.PNG" 
+            type = "image/x-icon"> 
     <title>todos</title>
   </head>
   <body>
