--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <title>todos</title>
   </head>
   <body>
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
   </body>
 </html>
